<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center"
    android:background="@drawable/back7"
    android:orientation="vertical"
    tools:context=".MainActivity">
<TextView
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/back7"
    android:gravity="center"
    android:textSize="30dp"
    android:textColor="@android:color/holo_red_light"
    android:text="@string/Welcome"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Engish"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:id="@+id/en"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:id="@+id/hi"
        android:text="@string/Hindi"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:id="@+id/or"
        android:text="@string/Oriya"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/kn"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:text="@string/Kannada"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:id="@+id/ta"
        android:text="@string/Telugu"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/ar"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:text="@string/arabic"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/bn"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:text="@string/Bengali"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/fr"
        android:textSize="22dp"
        android:background="@drawable/back"
        android:text="@string/French"/>
</LinearLayout>