<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back7"
    android:padding="15dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".NewTransaction">
<EditText
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:background="@drawable/shape"
    android:padding="15dp"
    android:hint="@string/NAME"
    android:id="@+id/data"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/shape"
        android:padding="15dp"
        android:hint="@string/amount"
        android:id="@+id/Amount"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/shape"
        android:padding="15dp"
        android:hint="Debt/Credit"
        android:id="@+id/status"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/shape"
        android:padding="15dp"
        android:hint="@string/PHONE"
        android:inputType="number"
        android:id="@+id/Phone"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/back7"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:textSize="22dp"
        android:id="@+id/record"
        android:text="@string/Record"/>
</LinearLayout>