<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
    android:background="@drawable/back7"
android:layout_height="match_parent"
android:paddingTop="20dp"
    android:gravity="center"
android:paddingLeft="40dp"
android:paddingRight="40dp"
android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="231dp"
        android:src="@drawable/logo" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginTop="50dp"
    android:inputType="number"
    android:background="@drawable/shape"
    android:padding="8dp"
    android:drawableLeft="@drawable/username"
    android:id="@+id/phone"
    android:hint="@string/PHONE"
    />
<EditText
    android:layout_width="match_parent"
    android:padding="8dp"
    android:drawableLeft="@drawable/password"
    android:layout_height="45dp"
    android:inputType="textPassword"
    android:background="@drawable/shape"
    android:id="@+id/pass"
    android:layout_marginTop="20dp"
    android:hint="@string/PASSWORD"
    />

<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/login"
    android:textSize="22sp"
    android:background="@drawable/shape"
    android:layout_marginTop="20dp"
    android:text="@string/login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18dp"
        android:id="@+id/signup"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        android:text="@string/Signup"/>


</LinearLayout>