<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".Register">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="328dp"
        android:src="@drawable/logo1" />
<EditText
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/name"
    android:background="@drawable/shape"
    android:padding="15dp"
    android:drawableLeft="@drawable/password"
    android:hint="@string/NAME"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ph"
        android:background="@drawable/shape"
        android:padding="15dp"
        android:drawableLeft="@drawable/password"
        android:hint="@string/PHONE"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/pass"
        android:background="@drawable/shape"
        android:padding="15dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:hint="@string/PASSWORD"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/conf"
        android:background="@drawable/shape"
        android:padding="15dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:hint="@string/PASSWORD"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/back7"
        android:padding="15dp"
        android:textSize="20dp"
        android:id="@+id/signup"
        android:text="@string/Signup"/>
</LinearLayout>